k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twoofus
  namespace: websites
  labels:
    app.kubernetes.io/name: twoofus
    homelab/stack: twoofus
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    # TODO: replace with your actual hostname
    - host: twoofus.in.alybadawy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twoofus
                port:
                  number: 80
